fix: onboarding cards - photo behind frame technique, resize stage

--- a/app/onboarding/onboarding.module.css
+++ b/app/onboarding/onboarding.module.css
@@ -20,28 +20,34 @@
 .cardsStage {
   position: relative;
   width: 100%;
-  max-width: 430px;
-  height: 360px;
+  max-width: 380px;
+  height: 280px;
   margin: 0 auto;
   margin-top: -20px;
   z-index: 1;
 }
 
-.card {
+.card1 { position: absolute; left: 0px;   top: 100px; width: 76px;  z-index: 2; }
+.card2 { position: absolute; left: 68px;  top: 72px;  width: 96px;  z-index: 3; }
+.card3 { position: absolute; left: 152px; top: 36px;  width: 118px; z-index: 4; }
+.card4 { position: absolute; left: 252px; top: 0px;   width: 140px; z-index: 5; }
+
+.cardPhoto {
   position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 18px;
+  z-index: 1;
 }
 
-.card1 { left: 0px;   top: 130px; width: 88px;  z-index: 2; }
-.card2 { left: 76px;  top: 95px;  width: 110px; z-index: 3; }
-.card3 { left: 168px; top: 50px;  width: 136px; z-index: 4; }
-.card4 { left: 272px; top: 0px;   width: 162px; z-index: 5; }
-
-.card img {
+.cardFrame {
+  position: relative;
+  z-index: 2;
   width: 100%;
   height: auto;
   display: block;
-  border-radius: 18px;
-  overflow: hidden;
 }
 
 .link {
